--- a/todo-app-project/src/App.css
+++ b/todo-app-project/src/App.css
@@ -1,38 +1,97 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+.page {
+  height: 100vh;
+  display: flex;
+  font-family: "Bitter", serif;
+  background-color: rgb(122, 122, 122);
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 90vh;
+  margin: 5vh auto 5vh auto;
+  margin: auto;
+  border: 10px #311d3f solid;
+  background-color: #354259;
+  width: 50vw;
+  border-radius: 5px;
+  font-size: 1.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  border-radius: 10px;
+  background-color: #cdc2ae;
+  padding: 0.5em;
+  width: 7em;
+  margin: 0.5em;
+  transition: transform 0.2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+button:hover {
+  transform: scale(1.1);
+}
+
+nav {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  padding: 0.5rem;
+}
+
+.header {
+  background-color: #f5eddc;
+  border-bottom: #311d3f solid 5px;
+  padding: 0.5em;
+}
+
+img {
+  width: 50px;
+  z-index: 2;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 767px) {
+  .App {
+    font-size: medium;
+    width: 75%;
   }
-  to {
-    transform: rotate(360deg);
+
+  button {
+    width: 5em;
+    padding: 0.1em;
+    margin: 0.1em;
+  }
+
+  h1 {
+    font-size: x-large;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  nav {
+    font-size: smaller;
+  }
+
+  button {
+    width: 7em;
+    min-height: 2.5em;
+    padding: 0.1em;
+    margin: 0.1em;
+  }
+
+  h1 {
+    font-size: xx-large;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1439px) {
+  nav {
+    font-size: 0.9em;
   }
 }
